helm/config/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-dav-discovery
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-nextcloud-dav-discovery@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - secretName: cloud-koudijs-lan
      hosts:
        - cloud.koudijs.lan
  rules:
    - host: cloud.koudijs.lan
      http:
        paths:
          - path: /.well-known/caldav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
          - path: /.well-known/carddav
            pathType: Exact
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
